:bug: removed pointer events for overlapping alert container

--- a/web/src/Components/Alerts/Alerts.scss
+++ b/web/src/Components/Alerts/Alerts.scss
@@ -10,6 +10,7 @@
   margin-right: 1rem;
   display: flex;
   flex-direction: column;
+  pointer-events: none;
 
   @media #{$mobile-down} {
     margin-bottom: 5rem;
